Patch for MacOS